<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <include layout="@layout/logo_tentacle"/>

    <ScrollView
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingStart="@dimen/margin_default"
                android:paddingTop="@dimen/dp_19"
                android:paddingEnd="@dimen/margin_default"
                android:paddingBottom="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <br.com.concrete.tentacle.custom.GameView
                    android:id="@+id/gameView"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/tvTitle1"
                    android:layout_marginTop="@dimen/dp_25"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/library_loan_register"
                    android:textAppearance="@style/TextHeavy.16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameView"/>

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/container"
                    app:singleSelection="true"
                    app:chipSpacingHorizontal="@dimen/dp_8"
                    android:layout_marginTop="@dimen/margin_default"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <br.com.concrete.tentacle.custom.ChipCustom
                        android:id="@+id/chipPs3"
                        app:chipSurfaceColor="@null"
                        android:text="@string/chip_ps3"
                        android:minWidth="@dimen/chipWidth"
                        android:minHeight="@dimen/chipHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <br.com.concrete.tentacle.custom.ChipCustom
                        android:id="@+id/chipPs4"
                        app:chipSurfaceColor="@null"
                        android:text="@string/chip_ps4"
                        android:minWidth="@dimen/chipWidth"
                        android:minHeight="@dimen/chipHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <br.com.concrete.tentacle.custom.ChipCustom
                        android:id="@+id/chip360"
                        app:chipSurfaceColor="@null"
                        android:text="@string/chip_360"
                        android:minWidth="@dimen/chipWidth"
                        android:minHeight="@dimen/chipHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <br.com.concrete.tentacle.custom.ChipCustom
                        android:id="@+id/chipOne"
                        app:chipSurfaceColor="@null"
                        android:text="@string/chip_one"
                        android:minWidth="@dimen/chipWidth"
                        android:minHeight="@dimen/chipHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <br.com.concrete.tentacle.custom.ChipCustom
                        android:id="@+id/chip3ds"
                        app:chipSurfaceColor="@null"
                        android:text="@string/chip_3ds"
                        android:minWidth="@dimen/chipWidth"
                        android:minHeight="@dimen/chipHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <br.com.concrete.tentacle.custom.ChipCustom
                        android:id="@+id/chipSwitch"
                        app:chipSurfaceColor="@null"
                        android:visibility="visible"
                        android:text="@string/chip_ns"
                        android:minWidth="@dimen/chipWidth"
                        android:minHeight="@dimen/chipHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.chip.ChipGroup>

            <br.com.concrete.tentacle.custom.StateButtonView
                    android:id="@+id/mediaRegisterButton"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    style="@style/StyleButton"
                    app:buttonName="@string/register_media_button"
                    android:layout_marginTop="@dimen/dp_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
