...
        android:layout_width="@dimen/game_icon_width"
        android:layout_height="@dimen/game_icon_height"/>

    <TextView
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/tvGameName"
        tools:text="Nome do Jogo"
        app:layout_constraintStart_toEndOf="@id/ivGameCover"
        app:layout_constraintEnd_toStartOf="@id/ivGameStatus"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/margin_default"
...
        app:layout_constraintTop_toBottomOf="@id/tvGameName"
        app:layout_constraintStart_toStartOf="@id/tvGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvGameReleaseYear"
        tools:text="2018"
        android:textColor="@color/textColor"
        android:textAppearance="@style/TextMedium.14sp"
        app:layout_constraintTop_toTopOf="@id/rbGame"
        app:layout_constraintBottom_toBottomOf="@id/rbGame"
        app:layout_constraintStart_toEndOf="@id/rbGame"
...
